--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "require": {
     "php": "^7.1.3",
     "symfony/config": "^4.3",
-    "symfony/dependency-injection": "^4.3"
+    "symfony/dependency-injection": "^4.3",
+    "nikic/php-parser": "^4.2"
   },
   "autoload": {
     "psr-4": {
