--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,20 @@
     "symfony/phpunit-bridge": "^4.3",
     "symfony/framework-bundle": "^4.3",
     "phpunit/phpunit": "8.2.4",
-    "symfony/debug-pack": "^1.0"
+    "symfony/debug-pack": "^1.0",
+    "phpstan/phpstan": "^0.11.12",
+    "squizlabs/php_codesniffer": "^3.4",
+    "thecodingmachine/phpstan-strict-rules": "^0.11.2",
+    "infection/infection": "^0.13.4",
+    "roave/backward-compatibility-check": "^3.0"
+  },
+  "scripts": {
+    "cscheck": "phpcs",
+    "csfix": "phpcbf",
+    "phpstan": "phpstan analyse src/ -c phpstan.neon --level=1 --no-progress -vvv --memory-limit=1024M",
+    "phpunit": "phpunit",
+    "infection": "infection --min-msi=50 --min-covered-msi=70 --log-verbosity=all",
+    "clover": "phpunit --coverage-clover clover.xml",
+    "bccheck": "roave-backward-compatibility-check"
   }
 }
