--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,11 @@ install:
 
 script:
   - composer validate --strict --no-check-lock
-  # simple-phpunit is the PHPUnit wrapper provided by the PHPUnit Bridge component and
-  # it helps with testing legacy code and deprecations (composer require symfony/phpunit-bridge)
-  - ./vendor/bin/simple-phpunit $PHPUNIT_FLAGS
+  - composer cscheck
+  - composer phpstan
+  - composer phpunit
+  - composer infection
+  - composer clover
+#  - composer bccheck
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
