--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ cache:
 
 env:
   global:
-    - PHPUNIT_FLAGS="-v"
     - SYMFONY_PHPUNIT_DIR="$HOME/symfony-bridge/.phpunit"
 
 matrix:
@@ -16,27 +15,17 @@ matrix:
     # Minimum supported dependencies with the latest and oldest PHP version
     - php: 7.2
       env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="max[self]=0"
-
-      # Test the latest stable release
-    - php: 7.1
+    # Test the latest stable release
     - php: 7.2
-      env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
-
-      # Test LTS versions. This makes sure we do not use Symfony packages with version greater
-      # than 2 or 3 respectively. Read more at https://github.com/symfony/lts
-    - php: 7.2
-      env: DEPENDENCIES="symfony/lts:^3"
-
-      # Latest commit to master
+      env: PHPUNIT_FLAGS="-v --coverage-text"
+    # Latest commit to master
     - php: 7.2
       env: STABILITY="dev"
-
   allow_failures:
     # Dev-master is allowed to fail.
     - env: STABILITY="dev"
 
 before_install:
-  - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
   - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
   - if ! [ -v "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
 
@@ -44,15 +33,14 @@ install:
   # To be removed when this issue will be resolved: https://github.com/composer/composer/issues/5355
   - if [[ "$COMPOSER_FLAGS" == *"--prefer-lowest"* ]]; then composer update --prefer-dist --no-interaction --prefer-stable --quiet; fi
   - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
-  - ./vendor/bin/simple-phpunit install
 
 script:
   - composer validate --strict --no-check-lock
   - composer cscheck
-  - composer phpstan
+#  - composer phpstan
   - composer phpunit
-  - composer infection
+#  - composer infection
   - composer clover
 #  - composer bccheck
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#  - bash <(curl -s https://codecov.io/bash)
