--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,9 @@ install:
 script:
   - composer validate --strict --no-check-lock
   - composer cscheck
-#  - composer phpstan
+  - composer phpstan
   - composer phpunit
-#  - composer infection
+  - composer infection
   - composer clover
 #  - composer bccheck
 after_success:
