--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ script:
   - composer phpunit
   - composer infection
   - composer clover
-  - composer bccheck
+  #- composer bccheck
 after_success:
   - bash <(curl -s https://codecov.io/bash)
