--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,12 @@
   "require": {
     "php": "^7.2",
     "symfony/config": "^4.3",
-    "symfony/dependency-injection": "^4.3"
+    "symfony/console": "^4.3",
+    "symfony/dependency-injection": "^4.3",
+    "symfony/framework-bundle": "^4.3",
+    "symfony/http-foundation": "^4.3",
+    "symfony/http-kernel": "^4.3",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
