--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     "symfony/framework-bundle": "^4.3",
     "symfony/http-foundation": "^4.3",
     "symfony/http-kernel": "^4.3",
-    "ext-json": "*"
+    "ext-json": "*",
+    "symfony/serializer": "^4.3",
+    "symfony/property-access": "^4.3"
   },
   "autoload": {
     "psr-4": {
